# PromptCard-Agent

./: .env.example  .eslintrc.cjs  .gitignore  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  LICENSE  PromptCard_V4_整合需求文档.md  README.md  fix_escapes.py  fix_escapes2.py  index.html  package-lock.json  package.json  playwright.config.ts  playwright.image-generation.config.ts  simple_convert.py  start-desktop.bat  start-desktop.vbs  start.bat  tailwind.config.js  test-ai.js  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.test.ts  vite.config.ts
agent-runtime/backend/: .gitignore  CLAUDE.md  README.md  pyproject.toml
agent-runtime/backend/app/gateway/: app.py  ark_chat.py  auth_middleware.py  csrf_middleware.py  deps.py  internal_auth.py  local_session.py  promptcard_runtime.py
agent-runtime/backend/app/gateway/image_generation/: contracts.py  prompt_compiler.py  result_fetcher.py  service.py
agent-runtime/backend/app/gateway/model_management/: catalog.py  connection_store.py  contracts.py  credential_store.py  diagnostics.py  migration.py  provider_registry.py  service.py
agent-runtime/backend/docs/: AUTO_TITLE_GENERATION.md  MCP_SERVER.md
agent-runtime/backend/tests/: conftest.py  test_credential_store.py  test_image_generation_diagnostics.py  test_image_generation_service.py  test_image_generation_storage_integration.py  test_image_result_fetcher.py  test_model_config.py  test_model_config_migration.py  test_model_connections.py  test_promptcard_runtime_boundary.py  test_seedream_prompt_compiler.py  test_seedream_provider.py  test_text_generation_providers.py
src-tauri/: Cargo.toml  tauri-config.test.ts  tauri.conf.json
src-tauri/capabilities/: capture-selection.json  capture-toolbar.json  default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: git-pull-source.toml  native-screenshot.toml
src-tauri/src/: lib.rs  main.rs
(+439 files in other folders)
