[package]
name = "promptcard-manager-dev-shell"
version = "4.0.0"
description = "PromptCard Manager desktop development shell"
authors = ["PromptCard Manager"]
edition = "2021"

[lib]
name = "promptcard_manager_dev_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "promptcard-manager-dev-shell"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
xcap = "0.9.6"
