[project]
name = "promptcard-runtime"
version = "1.0.0"
description = "PromptCard local gateway for pluggable text and image model providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "uvicorn[standard]>=0.34.0",
    "keyring==25.7.0",
    "volcengine-python-sdk[ark]==5.0.36",
    "pillow-heif==1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.11",
]

[tool.uv]
index-url = "https://pypi.org/simple"
